; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxr/extr_qlnxr_verbs.c_qlnxr_addr4_resolve.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxr/extr_qlnxr_verbs.c_qlnxr_addr4_resolve.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qlnxr_dev = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }
%struct.sockaddr_in = type { %struct.TYPE_3__, i32, i32 }
%struct.TYPE_3__ = type { i32 }
%struct.llentry = type { i32 }
%struct.sockaddr = type { i32 }

@.str = private unnamed_addr constant [104 x i8] c"rc = %d sa_len = 0x%x sa_family = 0x%x IP Address = %d.%d.%d.%d Dest MAC %02x:%02x:%02x:%02x:%02x:%02x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qlnxr_dev*, %struct.sockaddr_in*, %struct.sockaddr_in*, i32*)* @qlnxr_addr4_resolve to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qlnxr_addr4_resolve(%struct.qlnxr_dev* %0, %struct.sockaddr_in* %1, %struct.sockaddr_in* %2, i32* %3) #0 {
  %5 = alloca %struct.qlnxr_dev*, align 8
  %6 = alloca %struct.sockaddr_in*, align 8
  %7 = alloca %struct.sockaddr_in*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.llentry*, align 8
  store %struct.qlnxr_dev* %0, %struct.qlnxr_dev** %5, align 8
  store %struct.sockaddr_in* %1, %struct.sockaddr_in** %6, align 8
  store %struct.sockaddr_in* %2, %struct.sockaddr_in** %7, align 8
  store i32* %3, i32** %8, align 8
  %11 = load %struct.qlnxr_dev*, %struct.qlnxr_dev** %5, align 8
  %12 = getelementptr inbounds %struct.qlnxr_dev, %struct.qlnxr_dev* %11, i32 0, i32 0
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.sockaddr_in*, %struct.sockaddr_in** %7, align 8
  %17 = bitcast %struct.sockaddr_in* %16 to %struct.sockaddr*
  %18 = load i32*, i32** %8, align 8
  %19 = call i32 (i32, i32*, i32*, %struct.sockaddr*, i32*, %struct.llentry**, ...) @arpresolve(i32 %15, i32* null, i32* null, %struct.sockaddr* %17, i32* %18, %struct.llentry** %10)
  store i32 %19, i32* %9, align 4
  %20 = load %struct.qlnxr_dev*, %struct.qlnxr_dev** %5, align 8
  %21 = getelementptr inbounds %struct.qlnxr_dev, %struct.qlnxr_dev* %20, i32 0, i32 0
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %21, align 8
  %23 = load i32, i32* %9, align 4
  %24 = load %struct.sockaddr_in*, %struct.sockaddr_in** %7, align 8
  %25 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.sockaddr_in*, %struct.sockaddr_in** %7, align 8
  %28 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.sockaddr_in*, %struct.sockaddr_in** %7, align 8
  %31 = getelementptr inbounds %struct.sockaddr_in, %struct.sockaddr_in* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @NIPQUAD(i32 %33)
  %35 = load i32*, i32** %8, align 8
  %36 = getelementptr inbounds i32, i32* %35, i64 0
  %37 = load i32, i32* %36, align 4
  %38 = load i32*, i32** %8, align 8
  %39 = getelementptr inbounds i32, i32* %38, i64 1
  %40 = load i32, i32* %39, align 4
  %41 = load i32*, i32** %8, align 8
  %42 = getelementptr inbounds i32, i32* %41, i64 2
  %43 = load i32, i32* %42, align 4
  %44 = load i32*, i32** %8, align 8
  %45 = getelementptr inbounds i32, i32* %44, i64 3
  %46 = load i32, i32* %45, align 4
  %47 = load i32*, i32** %8, align 8
  %48 = getelementptr inbounds i32, i32* %47, i64 4
  %49 = load i32, i32* %48, align 4
  %50 = load i32*, i32** %8, align 8
  %51 = getelementptr inbounds i32, i32* %50, i64 5
  %52 = load i32, i32* %51, align 4
  %53 = call i32 @QL_DPRINT12(%struct.TYPE_4__* %22, i8* getelementptr inbounds ([104 x i8], [104 x i8]* @.str, i64 0, i64 0), i32 %23, i32 %26, i32 %29, i32 %34, i32 %37, i32 %40, i32 %43, i32 %46, i32 %49, i32 %52)
  %54 = load i32, i32* %9, align 4
  ret i32 %54
}

declare dso_local i32 @arpresolve(i32, i32*, i32*, %struct.sockaddr*, i32*, %struct.llentry**, ...) #1

declare dso_local i32 @QL_DPRINT12(%struct.TYPE_4__*, i8*, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @NIPQUAD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
